# learn-gcp-dataflow

./: .gitignore  outputs_lowercase-00000-of-00001  pyproject.toml  wordcount.py
